# EasyClip-Extension

./: CMakeLists.txt  README.md
EasyClip/: CMakeLists.txt  EasyClip.py
EasyClip/Resources/UI/: EasyClip.ui
